
if(WIN32)
    set(CURSES_LIBRARIES pdcurses)
else()
    set(CURSES_NEED_NCURSES TRUE)
    if(NOT APPLE)
        set(CURSES_NEED_WIDE TRUE)
    endif()
    find_package(Curses REQUIRED)
    include_directories(${CURSES_INCLUDE_DIR})
endif()

#if(APPLE)
#    execute_process(COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/relivecui.command ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/relivecui.command)
#endif()
add_executable(relivecui main.cpp info.hpp config.hpp ../../../thirdparty/ghc/cui.hpp)
target_link_libraries(relivecui relive-backend ${CURSES_LIBRARIES} ${SSL_BACKEND} ${AUDIO_BACKEND_LIBRARIES} ${SQLITE3_TARGET} Threads::Threads ${CMAKE_DL_LIBS})

if(APPLE)
    install(TARGETS relivecui DESTINATION "." COMPONENT relivecui_app)
    install(FILES ${PROJECT_SOURCE_DIR}/LICENSE DESTINATION "." COMPONENT relivecui_app)
else()
    install(TARGETS relivecui DESTINATION bin COMPONENT relivecui_app)
    if(UNIX)
        install(FILES ${PROJECT_SOURCE_DIR}/man/relivecui.1 DESTINATION shared/man/man1 COMPONENT relivecui_app)
        set(CPACK_COMPONENT_RELIVECUI_APP_DESCRIPTION "A curses based stream replayer for reLive archives (http://relive.nu)")
    endif()
endif()


